--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
+# Python / Jupyter
 __pycache__/
-.DS_Store
-.vscode/
-.idea/
 .ipynb_checkpoints/
-.venv/
-env/
-*.egg-info/
-.pytest_cache/
-outputs/
+
+# Conda
+.env
+*.conda
+
+# OS junk
+.DS_Store
+
+# Data (do NOT commit raw data)
 data/raw/
 data/processed/
+
+# Outputs
+outputs/
+
+# VS Code
+.vscode/
+
